; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testmodes.c_test_gf128_mul.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testmodes.c_test_gf128_mul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"\03\88\DA\CE`\B6\A3\92\F3(\C2\B9q\B2\FEx\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"f\E9K\D4\EF\8A,;\88L\FAY\CA4+.\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"^.\C7F\91pb\88,\85\B0hSS\DE\B7\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_gf128_mul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_gf128_mul() #0 {
  %1 = alloca [16 x i32], align 16
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i8** %4, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @cf_gf128_frombytes_be(i8* %8, i32 %9)
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @cf_gf128_frombytes_be(i8* %11, i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @cf_gf128_mul(i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* %7, align 4
  %19 = getelementptr inbounds [16 x i32], [16 x i32]* %1, i64 0, i64 0
  %20 = call i32 @cf_gf128_tobytes_be(i32 %18, i32* %19)
  %21 = load i8*, i8** %4, align 8
  %22 = getelementptr inbounds [16 x i32], [16 x i32]* %1, i64 0, i64 0
  %23 = call i64 @memcmp(i8* %21, i32* %22, i32 16)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @TEST_CHECK(i32 %25)
  ret void
}

declare dso_local i32 @cf_gf128_frombytes_be(i8*, i32) #1

declare dso_local i32 @cf_gf128_mul(i32, i32, i32) #1

declare dso_local i32 @cf_gf128_tobytes_be(i32, i32*) #1

declare dso_local i32 @TEST_CHECK(i32) #1

declare dso_local i64 @memcmp(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
